--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -5,16 +5,84 @@
     
 }
 
+.color-selection-wrap {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1rem 3rem;
+    background-color: rgba(0, 0, 0, 0.241);
+    backdrop-filter: blur(15px);
+    border-top: 1px solid rgba(255, 255, 255, 0.157);
+}
+
+.color-text {
+    padding: 1rem 2rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 2rem;
+    
+}
+
+.color__red {
+    color: rgb(254, 186, 186);
+    background-color: rgba(255, 0, 0, 0.257);
+    border: 1px solid rgb(199, 0, 0);
+}
+
+.color__orange {
+    color: #ffe5bc;
+    background-color: rgba(255, 157, 0, 0.186);
+    border: 1px solid rgba(255, 136, 0, 0.543);
+}
+
+.color__green {
+    color: #bcf8c6;
+    background-color: rgba(0, 255, 17, 0.186);
+    border: 1px solid rgba(0, 255, 68, 0.543);
+}
+
+
+.color__blue {
+    color: #bee8ff;
+    background-color: rgba(0, 123, 255, 0.186);
+    border: 1px solid rgba(0, 140, 255, 0.543);
+}
+
+.todo-input__color--red {
+    background-color: rgba(255, 0, 0, 0.257);
+}
+
+.todo-input__color--orange {
+    background-color: rgba(255, 157, 0, 0.186);
+}
+
+.todo-input__color--green {
+    background-color: rgba(0, 255, 17, 0.186);
+}
+
+.todo-input__color--blue {
+    background-color: rgba(0, 123, 255, 0.186);
+}
+
 .todo-input-wrap {
     display: flex;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255, 0.051);
+    /* background-color: rgba(255, 255, 255, 0.051); */
     margin: 4rem 1rem;
     border: var(--border-thin-light);
     padding: 1rem;
-    border-radius: 99px;
+    border-radius: 10px;
     
     
+}
+
+.todo-input::placeholder {
+    color: rgba(255, 255, 255, 0.511);
 }
 
 .todo-input {
@@ -22,22 +90,59 @@
     outline: none;
     caret-color: rgb(178, 178, 178);
     color: var(--color-text-light);
-    background: transparent;
+    /* background: transparent; */
     border: none;
     width: 85%;
 
 }
 
-.btn-add {
-    border: none;
-    padding: 0.8rem;
-    padding-bottom: 0.4rem;
+.btn-add-wrap {
+    display: flex;
+    gap: 1rem;
 }
+
+
+.btn-add {
+    font-size: 10px;
+    padding: 0.9rem 0.8rem 0.4rem 0.85rem;
+    border-radius: 6px;
+}
+
+.btn-add__red {
+    background-color: rgba(255, 0, 0, 0.128);
+    color: rgb(255, 91, 91);
+    border-color: red;
+    margin: 0.3rem 0;
+    padding: 0.1rem 1rem 0rem;
+}
+
+.btn-add__orange {
+    background-color: rgba(255, 68, 0, 0.276);
+    color: rgb(255, 143, 91);
+    border-color: rgb(255, 128, 0);
+    margin: 0.3rem 0;
+    padding: 0.1rem 1rem 0rem;}
+
+.btn-add__green {
+    background-color: rgba(77, 255, 0, 0.276);
+    color: rgb(157, 255, 91);
+    border-color: rgb(43, 255, 0);
+    margin: 0.3rem 0;
+    padding: 0.1rem 1rem 0rem;}
+
+.btn-add__blue {
+    background-color: rgba(0, 64, 255, 0.276);
+    color: rgb(132, 163, 248);
+    border-color: rgb(0, 110, 255);
+    margin: 0.3rem 0;
+    padding: 0.1rem 1rem 0rem;}
+
+.btn-add__section {
+    margin: 0.3rem 0;
+    padding: 0.1rem 1rem 0rem;}
 
 .btn-update > img {
     padding: 0.2rem;
-    padding-right: 0.1rem;
-    padding-top: 0.1rem;
     width: 20px;
     height: 20px;
 }
@@ -56,6 +161,28 @@
     border: 0;
 }
 
+.btn-disabled {
+    position: relative;
+  }
+  
+  .btn-disabled::before {
+    content: '✕'; /* Use '✕' or any other character you prefer for the "x" */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red; /* Change the color of the "x" */
+    font-size: 18px; /* Adjust the font size as needed */
+  }
+
+.btn-move-down {
+    padding: 0.8rem 0.8rem 0.3rem 0.8rem;
+}
+
+.btn-move-up {
+    padding: 0.6rem 0.8rem 0.5rem 0.8rem;
+}
+
 .btn-delete { 
     padding: 0.6rem 0.8rem;
     padding-bottom: 0.3rem;
@@ -68,16 +195,17 @@
 }
 
 .btn-signout > img {
-    width: 40px;
-    height: 40px;
-    padding: 0.5rem;
-    padding-right: 0.8rem;
+    width: 20px;
+    height: 20px;
+    padding: 0.1rem;
+    padding-right: 0.5rem;
+    padding-top: 0.2rem;
 }
 
 .btn-signout {
-    margin: 2rem;
-    background-color: rgba(252, 54, 54, 0.684);
-    border-color: rgb(238, 238, 238);
+    background-color: rgba(252, 54, 54, 0);
+    border-color: rgba(238, 238, 238, 0);
+    transition: background-color 0.3s, border-color 0.3s;
 }
 
 .btn-signout:hover {
@@ -85,18 +213,135 @@
     border-color: red;
 }
 
-.todo-wrap {
-    margin: 2rem;
-    border: var(--border-thin-light);
-    border-radius: 20px;
+.color__section p, .color__section.todo-wrap {
+    font-size: 32px;
+    text-align: center;
+    border: none;
+}
+
+.color__section>p {
+    border-bottom: 2px solid rgba(255, 255, 255, 0.785);
+    color: rgba(255, 255, 255, 0.814);
 }
 
 .todo-controls {
     display: flex;
+    margin-top: 1rem;
     padding: 1rem;
-    gap: 0.8rem;
+    gap: 1rem;
     justify-content: end;
-    background-color: rgba(255, 255, 255, 0.094);
+    background-color: rgba(255, 255, 255, 0.061);
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
 }
+
+@keyframes skeletonAnimation {
+    0% {
+      background-color: rgba(0, 0, 0, 0.22);
+    }
+    40% {
+      background-color: rgba(255, 255, 255, 0.384);
+    }
+    100% {
+      background-color: rgba(0, 0, 0, 0.22);
+    }
+  }
+  
+  .skeleton {
+   
+      background-color: white;
+    animation: skeletonAnimation 1.2s infinite ease-in-out;
+    border-radius: 10px;
+    height: 30px;
+    margin: 2rem;
+
+  }
+
+
+
+  /***🗯💭😁 Custom Modal*/
+
+  .modal__confirm-delete {
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    backdrop-filter: blur(6px);
+    padding: 3rem;
+  }
+  
+  .modal__confirm-delete--heading {
+    font-size: 24px;
+    color: rgba(253, 209, 209, 0.858);
+    background-color: rgba(255, 0, 0, 0.574);
+    text-align: center;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    padding: 1rem 2rem;
+  }
+
+  .modal__confirm-delete--body {
+    background-color: rgba(0, 0, 0, 0.342);
+    padding: 1rem;
+  }
+
+  .modal__confirm-delete--btn-wrap {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgba(255, 0, 0, 0.574);
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding: 1rem;
+  }
+
+.modal-you-are {
+    font-size: 16px;
+}
+
+  .modal-todo-text {
+    font-weight: 900;
+    font-size: 20px;
+  }
+
+  .btn-red {
+    color: #f6d1d1;
+    background-color: #3e080853;
+    border: 1px solid #ff0000;
+    padding: 0.5rem 1rem;
+  }
+  
+  .btn-red:hover {
+    color: #ff8e8e;
+    background-color: #9f464657;
+    border: 1px solid #ff0000;
+  }
+
+
+  .btn-grn {
+    color: #8fff8f;
+    background-color: #20692775;
+    border: 1px solid #00ff00;
+    padding: 0.5rem 1rem;
+  }
+  
+  .btn-grn:hover {
+    color: #5bc85b;
+    background-color: #3d8d45a8;
+    border: 1px solid #00ff00;
+  }
+
+  .signout-modal {
+    z-index: 99;
+    color: rgba(255, 255, 255, 0.794);
+    text-align: center;
+    font-size: 20px;
+   display: flex;
+   position: fixed;
+   justify-content: center;
+   align-self: center;
+    left: 50%;
+    top: 0;
+  }
