Add a CodeBox for syntax highlighting

--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -22,7 +22,7 @@
 .color-text {
     padding: 1rem 2rem;
     border-radius: 30px;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 500;
     margin: 2rem;
     
@@ -30,43 +30,31 @@
 
 .color__red {
     color: rgb(254, 186, 186);
-    background-color: rgba(255, 0, 0, 0.257);
+    background-color: rgba(255, 0, 0, 0.101);
     border: 1px solid rgb(199, 0, 0);
 }
 
 .color__orange {
     color: #ffe5bc;
-    background-color: rgba(255, 157, 0, 0.186);
+    background-color: rgba(255, 157, 0, 0.089);
     border: 1px solid rgba(255, 136, 0, 0.543);
 }
 
 .color__green {
     color: #bcf8c6;
-    background-color: rgba(0, 255, 17, 0.186);
+    background-color: rgba(0, 255, 17, 0.075);
     border: 1px solid rgba(0, 255, 68, 0.543);
 }
 
 
 .color__blue {
     color: #bee8ff;
-    background-color: rgba(0, 123, 255, 0.186);
+    background-color: rgba(0, 123, 255, 0.074);
     border: 1px solid rgba(0, 140, 255, 0.543);
 }
 
-.todo-input__color--red {
-    background-color: rgba(255, 0, 0, 0.257);
-}
-
-.todo-input__color--orange {
-    background-color: rgba(255, 157, 0, 0.186);
-}
-
-.todo-input__color--green {
-    background-color: rgba(0, 255, 17, 0.186);
-}
-
-.todo-input__color--blue {
-    background-color: rgba(0, 123, 255, 0.186);
+.color__section {
+  text-transform: capitalize;
 }
 
 .todo-input-wrap {
@@ -81,12 +69,38 @@
     
 }
 
+.todo-input__color--red {
+    background-color: rgba(255, 0, 0, 0.03);
+    border-color: rgb(157, 33, 33);
+}
+
+.todo-input__color--orange {
+    background-color: rgba(255, 157, 0, 0.03);
+    border-color: rgba(255, 136, 0, 0.543);
+}
+
+.todo-input__color--green {
+    background-color: rgba(0, 255, 17, 0.03);
+    border-color: rgba(0, 255, 68, 0.543);
+}
+
+.todo-input__color--blue {
+    background-color: rgba(0, 123, 255, 0.048);
+    border-color: rgba(0, 140, 255, 0.543);
+}
+
+
+.todo-input__color--code {
+    border: 1px solid #9868ffbe;
+    background-color: rgba(80, 47, 80, 0.114);
+}
+
 .todo-input::placeholder {
     color: rgba(255, 255, 255, 0.511);
 }
 
 .todo-input {
-    font-size: 18px;
+    font-size: 16px;
     outline: none;
     caret-color: rgb(178, 178, 178);
     color: var(--color-text-light);
@@ -98,6 +112,7 @@
 
 .btn-add-wrap {
     display: flex;
+    align-items: center;
     gap: 1rem;
 }
 
@@ -105,6 +120,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn-plus {
+    height: fit-content;
+}
+
+.btn-plus-wrap {
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
 }
 
 .btn-add {
@@ -118,7 +143,7 @@
     color: rgb(255, 91, 91);
     border-color: red;
     margin: 0.3rem 0;
-    padding: 0.1rem 1rem 0rem;
+    padding: 0.34rem 1rem;
 }
 
 .btn-add__orange {
@@ -126,25 +151,35 @@
     color: rgb(255, 143, 91);
     border-color: rgb(255, 128, 0);
     margin: 0.3rem 0;
-    padding: 0.1rem 1rem 0rem;}
+    padding: 0.34rem 1rem;
+}
 
 .btn-add__green {
     background-color: rgba(77, 255, 0, 0.276);
     color: rgb(157, 255, 91);
     border-color: rgb(43, 255, 0);
     margin: 0.3rem 0;
-    padding: 0.1rem 1rem 0rem;}
+    padding: 0.34rem 1rem;
+}
 
 .btn-add__blue {
     background-color: rgba(0, 64, 255, 0.276);
     color: rgb(132, 163, 248);
     border-color: rgb(0, 110, 255);
     margin: 0.3rem 0;
-    padding: 0.1rem 1rem 0rem;}
+    padding: 0.34rem 1rem;
+}
 
 .btn-add__section {
     margin: 0.3rem 0;
-    padding: 0.1rem 1rem 0rem;}
+    padding: 0.34rem 1rem;
+}
+
+.btn-add__code {
+    color: rgba(255, 141, 255, 0.881);
+    padding: 0.34rem 1rem;
+    height: fit-content;
+}
 
 .btn-update > img {
     padding: 0.2rem;
@@ -219,7 +254,7 @@
 }
 
 .color__section p, .color__section.todo-wrap {
-    font-size: 32px;
+    font-size: 26px;
     text-align: center;
     border: none;
 }
@@ -304,6 +339,8 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 0;
+    left: 0;
     backdrop-filter: blur(6px);
     padding: 3rem;
   }
@@ -321,6 +358,8 @@
   .modal__confirm-delete--body {
     background-color: rgba(0, 0, 0, 0.342);
     padding: 1rem;
+    max-height: 60vh;
+    overflow: auto;
   }
 
   .modal__confirm-delete--btn-wrap {
