--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -53,6 +53,31 @@
     border: 1px solid rgba(0, 140, 255, 0.543);
 }
 
+.scoll-code::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(66, 66, 66, 0.3);
+	border-radius: 0px;
+	background-color: #a2a2a200;
+}
+
+.scroll-code::-webkit-scrollbar
+{
+  height: 6px;
+	background-color: #00000038;
+}
+
+.scroll-code::-webkit-scrollbar-thumb
+{
+	border-radius: 0px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #775a90d3;
+}
+
+
+.color__code {
+  padding: 0;
+}
+
 .color__section {
   text-transform: capitalize;
 }
